# sphinx-autofixture

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  api.rst  async_demo.py  conf.py  contributing.rst  index.rst  license.rst  requirements.txt  usage.rst
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: sphinx-autofixture.rst
sphinx_autofixture/: __init__.py
tests/: conftest.py  myproject.py  pytest_asyncio.py  requirements.txt  test_directive.py  test_is_fixture.py  test_setup.py  test_sphinx_version.py
tests/doc-test/test-root/: conf.py  index.rst
tests/test_directive_/: test_output_310_index_html_.html  test_output_36_index_html_.html  test_output_36_pypy_index_html_.html  test_output_37_index_html_.html  test_output_37_pypy_index_html_.html  test_output_38_index_html_.html  test_output_index_html_.html
