[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "sphinx-autofixture"
version = "0.2.3"
description = "Sphinx autodocumenter for pytest fixtures."
readme = "README.rst"
keywords = [ "sphinx", "documentation", "sphinx-extension", "pytest",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/sphinx-autofixture"
"Issue Tracker" = "https://github.com/sphinx-toolbox/sphinx-autofixture/issues"
"Source Code" = "https://github.com/sphinx-toolbox/sphinx-autofixture"
Documentation = "https://sphinx-autofixture.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "sphinx_autofixture"
